# SP

./: .gitignore
Assignment1/: number_series.cpp  number_series.hpp  number_series_bm.cpp  number_series_test.cpp
Assignment2/: CMakeLists.txt  calculator.hpp  calculator_test.cpp
lecture2/: main.cpp
lecture3/polygon/: polygon.cpp  polygon.hpp  polygon_test  polygon_test.cpp
lecture3/wordle/: main.cpp
lecture4/: polyline.cpp
lecture6/: CMakeLists.txt  Visitor.cpp  Visitor.h  calculator.h  main.cpp
lecture7/: CMakeLists.txt  main.cpp
